Main nav bar done
Main nav bar with active icon and background image

--- a/Prot 1 func/teste.html
+++ b/Prot 1 func/teste.html
@@ -7,6 +7,7 @@
     <title>IPM prot 1 func</title>
 	
 	<script src="js/jquery-2.1.0.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/keypress-2.0.1.min.js"></script>
 	<script src="js/navbar.js"></script>
 
@@ -22,25 +23,36 @@
     <![endif]-->
   </head>
   <body>
-  	<div class="row">
-  		<div class="col-md-3 container">
-  			<div class="row">
-	  				<div class="col-md-8 jumbotron smallpadding">
-					    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-					      <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
-						  <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
-						  <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
-					    </nav>
-					</div>
-					<div class="col-md-4 smallpadding">
-						<ul class="nav nav-pills nav-stacked nav-fixed-left text-left" role="navigation">
-							<li><blockquote class=" mainicon glyphicon glyphicon-ok-circle"></bloackquote></li>
-							<li><span></span></li>
-							<li><span></span></li>
-						</ul>
-					</div>
-  			</div>
-  		</div>
+  	<div class="background">
+	  	<div class="row">
+	  		<div class="col-md-3 container">
+	  			<div class="row">
+		  				<div class="col-md-8 jumbotron smallpadding">
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						      <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
+							  <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
+							  <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
+						    </nav>
+						</div>
+						<div class="col-md-4 smallpadding">
+							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+								</li>
+							</ul>
+						</div>
+	  			</div>
+	  		</div>
+	  		<div class="col-md-9">
+	  			
+	  		</div>
+		</div>
 	</div>
   </body>
 </html>
