Main menu struct
Tittles and helper added. Current option text added.

--- a/Prot 1 func/teste.html
+++ b/Prot 1 func/teste.html
@@ -27,30 +27,44 @@
 	  	<div class="row">
 	  		<div class="col-md-3 container">
 	  			<div class="row">
-		  				<div class="col-md-8 jumbotron smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						      <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
-							  <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
-							  <li><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
-						    </nav>
-						</div>
-						<div class="col-md-4 smallpadding">
-							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-								</li>
-							</ul>
-						</div>
+	  				<div class="col-md-12 box" id="maintittle">
+	  					<h1 class= "width act">Menu Principal <br> <small></small></h1>
+	  				</div>
+	  			</div>
+	  			<div class="row top-buffer">
+	  				<div class="col-md-1 box" id="tittle">
+		  				<h3 class= "width act" id="headerfunc">Mensagens</h3>
+		  			</div>
+	  			</div>
+	  			<div class="row">
+	  				<div class="col-md-8 jumbotron smallpadding">
+					    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						    <li id="msg"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
+							<li id="camara"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
+							<li id="persona"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
+					    </nav>
+					</div>
+					<div class="col-md-4 smallpadding">
+						<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+							<li class="noact width">
+								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+							</li>
+							<li class="noact width">
+								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+							</li>
+							<li class="noact width">
+								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+							</li>
+						</ul>
+					</div>
 	  			</div>
 	  		</div>
 	  		<div class="col-md-9">
-	  			
+	  			<div class="row">
+	  				<div class="col-md-offset-2 box smallpadding" id="helper">
+	  					<h4>Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+	  				</div>
+	  			</div>
 	  		</div>
 		</div>
 	</div>
