1st presentation, 1 func

--- a/Prot 1 func/agree.html
+++ b/Prot 1 func/agree.html
@@ -28,32 +28,28 @@
 	  		<div class="col-md-3 container">
 	  			<div class="row">
 	  				<div class="col-md-12 box" id="maintittle">
-	  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
+	  					<h1 class= "width act maintext">Mensagens<br> <small>Enviar</small></h1>
 	  				</div>
 	  			</div>
 	  			<div class="row top-buffer">
 	  				<div class="col-md-1 box" id="tittle">
-		  				<h3 class= "width act maintext" id="headerfunc">Mensagens</h3>
+		  				<h3 class= "width act maintext" id="headerfunc">Tem a certeza?</h3>
 		  			</div>
-	  			</div>
+	  			</div>S
 	  			<div class="row">
 	  				<div class="col-md-8 jumbotron smallpadding">
-					    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    <li id="msg"><a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
-							<li id="camara"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
-							<li id="persona"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
+					    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+					    	<li id="sim"><a class="active" href="avisos.html"><h4>Sim</h4></a></li>
+						    <li id="nao"><a class="active" href="convites.html"><h4>Não</h4></a></li>
 					    </nav>
 					</div>
 					<div class="col-md-4 smallpadding">
 						<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-							<li class="noact width">
+							<li class="">
 								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
 							</li>
-							<li class="noact width">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-							</li>
-							<li class="noact width">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
+							<li class="">
+								<blockquote class=" side mainicon glyphicon glyphicon-remove-circle"></bloackquote>
 							</li>
 						</ul>
 					</div>
@@ -62,10 +58,17 @@
 	  		<div class="col-md-9 container">
 	  			<div class="row">
 	  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-	  					<h4 class="maintext width act" id="helperfunc">Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+	  					<h4 class="maintext width act" id="helperfunc">Prima o botão respectivo do volante para seleccionar a opção que desejar</h4>
 	  				</div>
 	  			</div>
-	  			
+	  			<div class="row top-buffer-main">
+	  				<div class="col-md-5 col-md-offset-7 jumbotron smallpadding" id="mainwindow">
+	  					<div class="width act" id="maintext">
+	  						<h4> Mensagem: </h4>
+	  						<p><bold>Tem a certeza que quer enviar esta mensagem?</bold></p>
+	  					</div>
+	  				</div>
+	  			</div>
 	  		</div>
 		</div>
 	</div>
