--- a/Prot 1 func/mensagens.html
+++ b/Prot 1 func/mensagens.html
@@ -28,20 +28,20 @@
 	  		<div class="col-md-3 container">
 	  			<div class="row">
 	  				<div class="col-md-12 box" id="maintittle">
-	  					<h1 class= "width act">Menu Principal <br> <small></small></h1>
+	  					<h1 class= "width act maintext">Mensagens <br> <small></small></h1>
 	  				</div>
 	  			</div>
 	  			<div class="row top-buffer">
 	  				<div class="col-md-1 box" id="tittle">
-		  				<h3 class= "width act" id="headerfunc">Mensagens</h3>
+		  				<h3 class= "width act maintext" id="headerfunc">Caixa de entrada</h3>
 		  			</div>
 	  			</div>
 	  			<div class="row">
 	  				<div class="col-md-8 jumbotron smallpadding">
 					    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    <li id="msg"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
-							<li id="camara"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
-							<li id="persona"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
+						    <li id="caixa"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-inbox"></span></a></li>
+							<li id="enviar"><a class="nav-button" href="temas.html"><span class="mainicon glyphicon glyphicon-upload"></span></a></li>
+							<li id="home"><a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a></li>
 					    </nav>
 					</div>
 					<div class="col-md-4 smallpadding">
@@ -59,10 +59,10 @@
 					</div>
 	  			</div>
 	  		</div>
-	  		<div class="col-md-9">
+	  		<div class="col-md-9 container">
 	  			<div class="row">
-	  				<div class="col-md-offset-2 box smallpadding" id="helper">
-	  					<h4>Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+	  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+	  					<h4 class="maintext width act" id="helperfunc">Ver e responder a mensagens recebidas</h4>
 	  				</div>
 	  			</div>
 	  		</div>
