--- a/Prot 1 func/insultos.html
+++ b/Prot 1 func/insultos.html
@@ -28,27 +28,23 @@
 	  		<div class="col-md-3 container">
 	  			<div class="row">
 	  				<div class="col-md-12 box" id="maintittle">
-	  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
+	  					<h1 class= "width act maintext">Mensagens<br> <small>Insultos</small></h1>
 	  				</div>
 	  			</div>
 	  			<div class="row top-buffer">
 	  				<div class="col-md-1 box" id="tittle">
-		  				<h3 class= "width act maintext" id="headerfunc">Mensagens</h3>
+		  				<h3 class= "width act maintext" id="headerfunc">1/1</h3>
 		  			</div>
 	  			</div>
 	  			<div class="row">
 	  				<div class="col-md-8 jumbotron smallpadding">
-					    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    <li id="msg"><a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
-							<li id="camara"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
-							<li id="persona"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
+					    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+					    	<li id="aviso1"><a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
+							<li id="home"><a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a></li>
 					    </nav>
 					</div>
 					<div class="col-md-4 smallpadding">
 						<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-							<li class="noact width">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-							</li>
 							<li class="noact width">
 								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
 							</li>
@@ -62,10 +58,20 @@
 	  		<div class="col-md-9 container">
 	  			<div class="row">
 	  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-	  					<h4 class="maintext width act" id="helperfunc">Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+	  					<h4 class="maintext width act" id="helperfunc">Mensagem pré-definida de insulto - 1</h4>
 	  				</div>
 	  			</div>
-	  			
+	  			<div class="row top-buffer-main">
+	  				<div class="col-md-5 col-md-offset-7 jumbotron smallpadding" id="mainwindow">
+	  					<div class="width act" id="maintext">
+	  						<h4> Mensagem: </h4>
+	  						<p>Sai da frente oh palhaço!</p>
+	  						<br>
+	  						<p>Sizenante Fonseca</p>
+	  						<p>21/03/2100</p>
+	  					</div>
+	  				</div>
+	  			</div>
 	  		</div>
 		</div>
 	</div>
