better code + inbox

--- a/Prot 1 func/agree.html
+++ b/Prot 1 func/agree.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IPM prot 1 func</title>
+    <title>IPM prot</title>
 	
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -24,52 +24,54 @@
   </head>
   <body>
   	<div class="background">
-	  	<div class="row">
-	  		<div class="col-md-3 container">
-	  			<div class="row">
-	  				<div class="col-md-12 box" id="maintittle">
-	  					<h1 class= "width act maintext">Mensagens<br> <small>Enviar</small></h1>
-	  				</div>
-	  			</div>
-	  			<div class="row top-buffer">
-	  				<div class="col-md-1 box" id="tittle">
-		  				<h3 class= "width act maintext" id="headerfunc">Tem a certeza?</h3>
+	  	<div class="container-fluid">
+		  	<div class="row">
+		  		<div class="col-md-3">
+		  			<div class="row">
+		  				<div class="col-md-12 box" id="maintittle">
+		  					<h1 class= "width act maintext">Mensagens<br> <small>Confirmação</small></h1>
+		  				</div>
 		  			</div>
-	  			</div>S
-	  			<div class="row">
-	  				<div class="col-md-8 jumbotron smallpadding">
-					    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-					    	<li id="sim"><a class="active" href="avisos.html"><h4>Sim</h4></a></li>
-						    <li id="nao"><a class="active" href="convites.html"><h4>Não</h4></a></li>
-					    </nav>
-					</div>
-					<div class="col-md-4 smallpadding">
-						<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-							<li class="">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-							</li>
-							<li class="">
-								<blockquote class=" side mainicon glyphicon glyphicon-remove-circle"></bloackquote>
-							</li>
-						</ul>
-					</div>
-	  			</div>
-	  		</div>
-	  		<div class="col-md-9 container">
-	  			<div class="row">
-	  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-	  					<h4 class="maintext width act" id="helperfunc">Prima o botão respectivo do volante para seleccionar a opção que desejar</h4>
-	  				</div>
-	  			</div>
-	  			<div class="row top-buffer-main">
-	  				<div class="col-md-5 col-md-offset-7 jumbotron smallpadding" id="mainwindow">
-	  					<div class="width act" id="maintext">
-	  						<h4> Mensagem: </h4>
-	  						<p><bold>Tem a certeza que quer enviar esta mensagem?</bold></p>
-	  					</div>
-	  				</div>
-	  			</div>
-	  		</div>
+		  			<div class="row top-buffer">
+		  				<div class="col-md-1 box" id="tittle">
+			  				<h3 class= "width act maintext" id="headerfunc">Tem a certeza?</h3>
+			  			</div>
+		  			</div>
+		  			<div class="row">
+		  				<div id="sidebar" class="col-md-8 box smallpadding">
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						    	<li id="sim"><a class="active" href="avisos.html"><h4>Sim</h4></a></li>
+							    <li id="nao"><a class="active" href="convites.html"><h4>Não</h4></a></li>
+						    </nav>
+						</div>
+						<div class="col-md-4 padding2">
+							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+								<li class="">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="">
+									<blockquote class=" side mainicon glyphicon glyphicon-remove-circle"></blockquote>
+								</li>
+							</ul>
+						</div>
+		  			</div>
+		  		</div>
+		  		<div class="col-md-9">
+		  			<div class="row">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  					<h4 class="maintext width act" id="helperfunc">Prima o botão respectivo do volante para seleccionar a opção que desejar</h4>
+		  				</div>
+		  			</div>
+		  			<div class="row top-buffer-main">
+		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
+		  					<div class="width act" id="maintext">
+		  						<h4> Mensagem: </h4>
+		  						<p><bold>Tem a certeza que quer enviar esta mensagem?</bold></p>
+		  					</div>
+		  				</div>
+		  			</div>
+		  		</div>
+			</div>
 		</div>
 	</div>
   </body>
