--- a/Prot 1 func/entrada.html
+++ b/Prot 1 func/entrada.html
@@ -29,20 +29,32 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens<br> <small>Avisos</small></h1>
+		  					<h1 class= "width act maintext">Mensagens <br> <small>Caixa de Entrada</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Mensagem: 1 / 1</h3>
+			  				<h3 class= "width act maintext" id="headerfunc">Mensagens nova</h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 1" data-help="Mensagem pré-definida de aviso - 1" data-txt="<h4> Mensagem: </h4><p>Cuidado! Acabei de passar por uma operação stop.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
-						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
-						    	</li>
+						   		<li class="left-menu msgli unread store" data-msg="nova" data-txt="<h4> Mensagem: </h4><p>Cuidado! Acabei de passar por uma operação stop.</p><p>Josefa Fradique</p><p>24/03/2230</p>">
+							    	<a class="nav-button" href="recebida.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
+							    </li>
+								<li class="left-menu msgli unread store" data-msg="nova" data-txt="<h4> Mensagem: </h4><p>Cuidado! Acabei de passar por uma operação stop.</p><p>Josefa Fradique</p><p>24/03/2230</p>">
+									<a class="nav-button" href="recebida.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
+								</li>
+								<li class="left-menu msgli unread store" data-msg="nova" data-txt="<h4> Mensagem: </h4><p>Olá, não pude deixar de reparar em ti. Queres ir beber um café logo?</p><p>Josefa Fradique</p><p>24/03/2230</p>">
+									<a class="nav-button" href="recebida.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
+								</li>
+								<li class="left-menu msgli read store" data-msg="lida" data-txt="<h4> Mensagem: </h4><p>Epah, pareces um helicóptero... Gira e boa!</p><p>Josefa Fradique</p><p>24/03/2230</p>">
+									<a class="nav-button" href="recebida.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
+								</li>
+								<li class="left-menu msgli read store" data-msg="lida" data-txt="<h4> Mensagem: </h4><p>Sai da frente oh palhaço!</p><p>Josefa Fradique</p><p>24/03/2230</p>">
+									<a class="nav-button" href="recebida.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
+								</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
@@ -56,6 +68,18 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
 							</ul>
 						</div>
 		  			</div>
@@ -63,16 +87,16 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Mensagem pré-definida de aviso - 1</h4>
+		  					<h4 class="maintext width act" id="helperfunc">3 mensagens novas, 2 mensagens lidas</h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<h4> Mensagem: </h4>
+		  						<h4>Mensagem: </h4>
 		  						<p>Cuidado! Acabei de passar por uma operação stop.</p>
-		  						<p>Sizenante Fonseca</p>
-		  						<p>21/03/2100</p>
+		  						<p>Josefa Fradique</p>
+		  						<p>24/03/2230</p>
 		  					</div>
 		  				</div>
 		  			</div>
