--- a/Prot 1 func/index.html
+++ b/Prot 1 func/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IPM prot 1 func</title>
+    <title>IPM prot</title>
 	
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -24,49 +24,56 @@
   </head>
   <body>
   	<div class="background">
-	  	<div class="row">
-	  		<div class="col-md-3 container">
-	  			<div class="row">
-	  				<div class="col-md-12 box" id="maintittle">
-	  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
-	  				</div>
-	  			</div>
-	  			<div class="row top-buffer">
-	  				<div class="col-md-1 box" id="tittle">
-		  				<h3 class= "width act maintext" id="headerfunc">Mensagens</h3>
+  		<div class="container-fluid">
+		  	<div class="row">
+		  		<div class="col-md-3">
+		  			<div class="row">
+		  				<div class="col-md-12 box" id="maintittle">
+		  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
+		  				</div>
 		  			</div>
-	  			</div>
-	  			<div class="row">
-	  				<div class="col-md-8 jumbotron smallpadding">
-					    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    <li id="msg"><a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a></li>
-							<li id="camara"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a></li>
-							<li id="persona"><a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a></li>
-					    </nav>
-					</div>
-					<div class="col-md-4 smallpadding">
-						<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-							<li class="noact width">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-							</li>
-							<li class="noact width">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-							</li>
-							<li class="noact width">
-								<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></bloackquote>
-							</li>
-						</ul>
-					</div>
-	  			</div>
-	  		</div>
-	  		<div class="col-md-9 container">
-	  			<div class="row">
-	  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-	  					<h4 class="maintext width act" id="helperfunc">Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
-	  				</div>
-	  			</div>
-	  			
-	  		</div>
+		  			<div class="row top-buffer">
+		  				<div class="col-md-1 box" id="tittle">
+			  				<h3 class= "width act maintext" id="headerfunc">Mensagens</h3>
+			  			</div>
+		  			</div>
+		  			<div class="row">
+		  				<div id="sidebar" class="col-md-8 box smallpadding">
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
+							    <li id="msg" class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="">
+							      	<a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+							    </li>
+							  	<li id="camara" class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							  	</li>
+							  	<li id="persona" class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+							  	</li>
+						    </nav>
+						</div>
+						<div class="col-md-4 padding2">
+							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+							</ul>
+						</div>
+		  			</div>
+		  		</div>
+		  		<div class="col-md-9">
+		  			<div class="row">
+		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
+		  					<h4 class="maintext width act" id="helperfunc">Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+		  				</div>
+		  			</div>
+		  		</div>
+			</div>
 		</div>
 	</div>
   </body>
