--- a/Prot 1 func/resposta.html
+++ b/Prot 1 func/resposta.html
@@ -29,29 +29,32 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens <br> <small>Caixa de Entrada</small></h1>
+		  					<h1 class= "width act maintext">Mensagens<br> <small>Responder</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Mensagens nova</h3>
+			  				<h3 class= "width act maintext" id="headerfunc">Mensagem: 1 / 1</h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu msgop" data-msg="Responder" data-help="Responder a esta mensagem usando uma das resposta pré-definidas">
-									<a class="nav-button" href="resposta.html"><span class="mainicon glyphicon glyphicon-upload"></span></a>
-								</li>
-						   		<li class="left-menu msgop" data-msg="Marcar como por ler" data-help="Marcar a mensagem recebida como por ler">
-							    	<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
-							    </li>
-								<li class="left-menu msgop" data-msg="Marcar como lida" data-help="Marcar a mensagem recebida como lida">
-									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
-								</li>
-								<li class="left-menu msgop" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada">
-									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
-								</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 1 / 5" data-help="Resposta pré-definida - 1" data-txt="<h4> Mensagem: </h4><p>Sim, teria todo o gosto.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 2 / 5" data-help="Resposta pré-definida - 2" data-txt="<h4> Mensagem: </h4><p>Não, não me parece.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 3 / 5" data-help="Resposta pré-definida - 3" data-txt="<h4> Mensagem: </h4><p>Muito obrigado!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 4 / 5" data-help="Resposta pré-definida - 4" data-txt="<h4> Mensagem: </h4><p>Não tem nada que agradecer.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 5 / 5" data-help="Resposta pré-definida - 5" data-txt="<h4> Mensagem: </h4><p>Vai tu!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
@@ -84,16 +87,16 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">3 mensagens novas, 2 mensagens lidas</h4>
+		  					<h4 class="maintext width act" id="helperfunc">Resposta pré-definida - 1</h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<h4>Mensagem: </h4>
-		  						<p>Cuidado! Acabei de passar por uma operação stop.</p>
-		  						<p>Josefa Fradique</p>
-		  						<p>24/03/2230</p>
+		  						<h4> Mensagem: </h4>
+		  						<p>Sim, teria todo o gosto.</p>
+		  						<p>Sizenante Fonseca</p>
+		  						<p>21/03/2100</p>
 		  					</div>
 		  				</div>
 		  			</div>
